version/0.18/_sources/api/solver/_autosummary/settings/interface_1.rst.txt
:orphan:

.. _interface_1:

interface
=========

.. autoclass:: ansys.fluent.core.solver.settings_232.interface_1.interface
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`interface_child <interface_child_1>`


.. rubric:: Included in:

========================================   ===================================

Parent                                                                 Summary

========================================   ===================================
:ref:`mesh_interfaces <mesh_interfaces>`       Enter the mesh interfaces menu.

========================================   ===================================

